Created image file. Navbar created and needs a bit more work. Next will be to create main and footer section.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,39 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="index.css" />
     <title>Events Center</title>
   </head>
-  <body></body>
+  <body>
+    <header id="header">
+      <nav id="navigation">
+        <ul id="nav-bar">
+          <li>
+            <img
+              src="./images/esports-logo-template-for-gaming-team-or-tournament-vector.jpg"
+              alt="esport logo"
+              id="nav-image"
+            />
+          </li>
+          <li class="list-item">
+            <a href="/" id="home" class="nav-link">Home</a>
+          </li>
+          <li class="list-item">
+            <a href="events.html" id="events" class="nav-link">Events</a>
+          </li>
+          <li class="list-item">
+            <a href="food.html" id="food" class="nav-link">Food Menu</a>
+          </li>
+          <li class="list-item">
+            <a href="location.html" id="location" class="nav-link">Find Us</a>
+          </li>
+          <li class="list-item">
+            <a href="contact.html" id="contact" class="nav-link">Contact Us</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <main id="main-section"></main>
+    <footer id="footer-section"></footer>
+  </body>
 </html>
