Adjusted placement of mid section. Created footer

--- a/index.html
+++ b/index.html
@@ -35,7 +35,15 @@
         </ul>
       </nav>
     </header>
-    <main id="main-section"></main>
-    <footer id="footer-section"></footer>
+    <main id="main-section">
+      <div id="intro-heading">
+        <h1 id="intro">Come see the biggest E-Sporting event of the year!</h1>
+        <br />
+        <h3 id="date">Starting 02/15/2025</h3>
+      </div>
+    </main>
+    <footer id="footer-section">
+      <h2>&copy; E-Sport Community</h2>
+    </footer>
   </body>
 </html>
