Created a calender for events page and added a few events along with photos as their backgroun. Will continue creating events for this page.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="index.css" />
+    <link rel="stylesheet" href="home.css" />
     <title>Events Center</title>
   </head>
   <body>
@@ -36,10 +37,10 @@
       </nav>
     </header>
     <main id="main-section">
-      <div id="intro-heading">
+      <div id="intro-section">
         <h1 id="intro">Come see the biggest E-Sporting event of the year!</h1>
         <br />
-        <h3 id="date">Starting 02/15/2025</h3>
+        <h3 id="date">Starting 02/15/2025 - 02/22/2025</h3>
       </div>
     </main>
     <footer id="footer-section">
