Finished photos for calender events. adding remainder of the schedule to calender and getting started with food section

--- a/events.html
+++ b/events.html
@@ -81,24 +81,70 @@
                 <td>13</td>
                 <td>14</td>
                 <td id="overwatch-try">
-                  15
-                  <p>Overwatch 2 <br />Tryouts</p>
+                  <p class="date-text">
+                    15 <br />
+                    Overwatch 2 <br />Tryouts <br />
+                    8am - 4pm
+                  </p>
                 </td>
               </tr>
               <tr>
-                <td id="marvel-try">
-                  16
-                  <p>
+                <td id="marvel-try" class="event-photo">
+                  <p class="date-text">
+                    16 <br />
                     Marvel Rivals <br />
-                    Tryouts
+                    Tryouts <br />
+                    8am - 4pm
                   </p>
                 </td>
-                <td>17</td>
-                <td>18</td>
-                <td>19</td>
-                <td>20</td>
-                <td>21</td>
-                <td>22</td>
+                <td id="cod-try" class="event-photo">
+                  <p class="date-text">
+                    17 <br />
+                    Call of Duty <br />
+                    Tryouts <br />
+                    8am - 4pm
+                  </p>
+                </td>
+                <td>
+                  18
+                  <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                  </ul>
+                </td>
+                <td>
+                  19
+                  <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                  </ul>
+                </td>
+                <td>
+                  20
+                  <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                  </ul>
+                </td>
+                <td>
+                  21
+                  <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                  </ul>
+                </td>
+                <td>
+                  22
+                  <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                  </ul>
+                </td>
               </tr>
               <tr>
                 <td>23</td>
