--- a/menu/menu.html
+++ b/menu/menu.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="index.css" />
-    <link rel="stylesheet" href="home.css" />
-    <title>Events Center</title>
+    <link rel="stylesheet" href="./menu.css" />
+    <link rel="stylesheet" href="../index.css" />
+
+    <title>Menu</title>
   </head>
   <body>
     <header id="header">
@@ -13,7 +14,7 @@
         <ul id="nav-bar">
           <li>
             <img
-              src="./images/esports-logo-template-for-gaming-team-or-tournament-vector.jpg"
+              src="../images/esports-logo-template-for-gaming-team-or-tournament-vector.jpg"
               alt="esport logo"
               id="nav-image"
             />
@@ -22,33 +23,29 @@
             <a href="/" id="home" class="nav-link">Home</a>
           </li>
           <li class="list-item">
-            <a href="./events/events.html" id="events" class="nav-link"
+            <a href="../events/events.html" id="events" class="nav-link"
               >Events</a
             >
           </li>
           <li class="list-item">
-            <a href="./menu/menu.html" id="food" class="nav-link">Food Menu</a>
+            <a href="../menu/menu.html" id="food" class="nav-link">Food Menu</a>
           </li>
           <li class="list-item">
-            <a href="./location/location.html" id="location" class="nav-link"
+            <a href="../location/location.html" id="location" class="nav-link"
               >Find Us</a
             >
           </li>
           <li class="list-item">
-            <a href="./contact/contact.html" id="contact" class="nav-link"
+            <a href="../contact/contact.html" id="contact" class="nav-link"
               >Contact Us</a
             >
           </li>
         </ul>
       </nav>
     </header>
-    <main id="main-section">
-      <div id="intro-section">
-        <h1 id="intro">Come see the biggest E-Sporting event of the year!</h1>
-        <br />
-        <h3 id="date">Starting 02/15/2025 - 02/22/2025</h3>
-      </div>
-    </main>
+
+    <main></main>
+
     <footer id="footer-section">
       <h2>&copy; E-Sport Community</h2>
     </footer>
