--- a/index.html
+++ b/index.html
@@ -3,43 +3,61 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
     <link rel="stylesheet" href="index.css" />
     <link rel="stylesheet" href="home.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
     <title>Events Center</title>
   </head>
   <body>
     <header id="header">
-      <nav id="navigation">
-        <ul id="nav-bar">
-          <li>
-            <img
-              src="./images/esports-logo-template-for-gaming-team-or-tournament-vector.jpg"
-              alt="esport logo"
-              id="nav-image"
-            />
-          </li>
-          <li class="list-item">
-            <a href="/" id="home" class="nav-link">Home</a>
-          </li>
-          <li class="list-item">
-            <a href="./events/events.html" id="events" class="nav-link"
-              >Events</a
-            >
-          </li>
-          <li class="list-item">
-            <a href="./menu/menu.html" id="food" class="nav-link">Food Menu</a>
-          </li>
-          <li class="list-item">
-            <a href="./location/location.html" id="location" class="nav-link"
-              >Find Us</a
-            >
-          </li>
-          <li class="list-item">
-            <a href="./contact/contact.html" id="contact" class="nav-link"
-              >Contact Us</a
-            >
-          </li>
-        </ul>
+      <nav class="navbar navbar-expand-lg bg-body-tertiary">
+        <div class="container-fluid" id="nav-header">
+          <img
+            src="../images/esports-logo-template-for-gaming-team-or-tournament-vector.jpg"
+            alt="e-sports logo"
+            id="site-image"
+          />
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link " aria-current="page" href="/">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../events/events.html">Events</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../menu/menu.html">Menu</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../location/location.html">Location</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="../contact/contact.html">Contact Us</a>
+              </li>
+          </div>
+        </div>
       </nav>
     </header>
     <main id="main-section">
